--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "kylekatarnls/laravel-carbon-2": "^1.0.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "tuupola/base62": "^2.0"
+        "nesbot/carbon": "2.16.3 as 1.34.0",
+        "tuupola/base62": "^2.0",
+        "tymon/jwt-auth": "1.0.0-rc.4.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
